[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/minigames/treasure_dig.gd" id="1_script"]

[node name="TreasureDig" type="Node"]
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.07, 0.04, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "TREASURE DIG"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="CountdownLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Time: 10.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = ""
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer3" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="DepthBarContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="DepthBar" type="ColorRect" parent="VBoxContainer/DepthBarContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(60, 300)
color = Color(0.2, 0.15, 0.1, 1)

[node name="DepthFill" type="ColorRect" parent="VBoxContainer/DepthBarContainer/DepthBar"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 60.0
offset_bottom = 0.0
color = Color(0.6, 0.4, 0.1, 1)

[node name="LayerProgress" type="ColorRect" parent="VBoxContainer/DepthBarContainer/DepthBar"]
unique_name_in_owner = true
layout_mode = 0
offset_top = -8.0
offset_right = 0.0
offset_bottom = 0.0
color = Color(1, 0.85, 0.2, 1)

[node name="Spacer4" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Depth: 0 / 10"
horizontal_alignment = 1
vertical_alignment = 1
